--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,14 @@ html, body {
     width: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 #content {
   position: relative;
   margin: 100px auto;
-  width: 1060px;
+  min-width: 1110px;
+  width: calc(48vw + 310px);
   height: 650px;
 }
 
@@ -18,14 +20,13 @@ html, body {
   top: -26px;
 }
 
-
 #chamber {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 750px;
-    height: 400px;
-    border: 2px solid rgb(140 140 140);
+  float: left;
+  width: 48vw;
+  height: 27vw;
+  min-width: 800px;
+  min-height: 450px;
+  border: 2px solid rgb(140 140 140);
 }
 
 #member-popup {
@@ -62,8 +63,8 @@ html, body {
 
 #vote-summary {
   position: absolute;
-  top: 310px;
-  left: 270px;
+  top: 350px;
+  left: 300px;
   text-align: center;
   font-size: 0.9rem;
 }
@@ -78,20 +79,17 @@ html, body {
 }
 
 #rollcalls {
-    position: absolute;
-    left: 780px;
-    top: 0px;
-    width: 280px;
-    height: 400px;
-
-    font-family: sans-serif;
-    font-size: 0.8rem;
-    letter-spacing: 1px;
-}
-
-#rollcalls table {
+  float: left;
+  margin-left: 10px;
+  min-width: 280px;
+  min-height: 450px;
   width: 280px;
-  height: 400px;
+  height: 27vw;
+
+  font-family: sans-serif;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+
   border: 2px solid rgb(140 140 140);
   border-collapse: collapse;
   display: block;
