--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html, body {
     width: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-y: hidden;
 }
 
 #content {
@@ -94,13 +94,28 @@ html, body {
   border-collapse: collapse;
   display: block;
   overflow-y: scroll;
+  overflow-x: hidden;
+  table-layout: fixed;
+  scrollbar-width: 10px;
 }
 
 .vote-button {
-  background-color: white;
+  background-color: #ffffff;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 2px 5px 2px 5px;
   border: 0px;
   width: 100%; 
-  height: 100%;
+  user-select: none;
+  position: relative;
+}
+
+.voteview-link {
+  position: absolute;
+  top: calc(100% - 20px);
+  left: calc(50% - 30px);
+  text-decoration: underline;
+  color: #000000;
 }
 
 .vote-button:active {
@@ -114,8 +129,8 @@ tfoot {
 
 th,
 tr {
+  width: 100%;
   border: 1px solid rgb(160 160 160);
-  padding: 8px 10px;
 }
 
 tr:last-of-type {
