--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,22 @@ html, body {
     overflow-y: hidden;
 }
 
+body {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 100px;
+  gap: 10px;
+}
+
 #content {
   position: relative;
-  margin: 100px auto;
-  min-width: 1110px;
-  width: calc(48vw + 310px);
-  height: 650px;
+  width: 56vw;
+  height: 32vw;
+/*
+  min-width: 800px;
+  min-height: 450px;
+*/
 }
 
 #select-congress {
@@ -30,11 +40,9 @@ html, body {
 }
 
 #chamber {
-  float: left;
-  width: 48vw;
-  height: 27vw;
-  min-width: 800px;
-  min-height: 450px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   border: 2px solid rgb(140 140 140);
 }
 
@@ -45,7 +53,7 @@ html, body {
   left: 0px;
   top: 0px;
   width: 200px;
-  height: 60px;
+  height: 50px;
   font-size: 0.85rem;
   background-color: #ffffff;
   border: 1px solid black;
@@ -88,12 +96,13 @@ html, body {
 }
 
 #rollcalls {
-  float: left;
-  margin-left: 10px;
+/*
   min-width: 280px;
   min-height: 450px;
-  width: 280px;
-  height: 27vw;
+*/
+  width: 18vw;
+  max-width: 350px;
+  height: 32vw;
 
   font-family: sans-serif;
   font-size: 0.8rem;
