--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,33 @@ html, body {
     margin: 0;
     padding: 0;
     overflow-y: hidden;
+    font-family: "Times New Roman", "serif";
 }
 
-body {
+header {
+  width: 100%;
+}
+
+#page-title {
+  text-align: center;                 /* center the text */
+  font-size: clamp(2rem, 6vw, 3rem);  /* responsive size */
+  line-height: 1.1;
+  margin: 1.5rem 0;
+  letter-spacing: -0.02em;
+  font-family: "Cormorant", "Times New Roman", "serif";
+  font-weight: 500;
+}
+
+#main {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding-top: 100px;
+  padding-top: 30px;
   gap: 10px;
 }
 
-#content {
+#chamber-box {
   position: relative;
   width: 56vw;
   height: 32vw;
