--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,47 @@ header {
   left: 205px;
 }
 
+#search-members {
+  position: absolute;
+  height: 25px;
+  top: -26px;
+  right: -3px;
+}
+
+#search-members-input {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  height: 100%;
+  width: 300px;
+  padding-right: 16px;
+}
+
+.search-input::-ms-clear {
+   width : 0;
+   height: 0;
+   display: none;
+}
+
+#search-members-button {
+  position: absolute;
+  top: 2px;
+  right: 3px;
+  border: 0px;
+  background-color: #ffffff;
+}
+
+.search-button svg {
+  display: block;
+  width: 16px;
+  height: 16px;
+  fill: #fff;
+  stroke: #000;
+  stroke-width: 2.5;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+
 #chamber {
   position: absolute;
   width: 100%;
@@ -111,7 +152,8 @@ header {
   font-size:1.20rem;
 }
 
-#rollcalls {
+#rollcalls-box {
+  position: relative;
 /*
   min-width: 280px;
   min-height: 450px;
@@ -120,13 +162,22 @@ header {
   max-width: 350px;
   height: 32vw;
 
+}
+
+#rollcalls {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+
   font-family: sans-serif;
   font-size: 0.8rem;
   letter-spacing: 1px;
 
   border: 2px solid rgb(140 140 140);
   border-collapse: collapse;
-  display: block;
   overflow-y: scroll;
   overflow-x: hidden;
   table-layout: fixed;
@@ -154,6 +205,31 @@ header {
 
 .vote-button:active {
   background-color: #dddddd;
+}
+
+#search-votes {
+  position: absolute;
+  top: -26px;
+  left: 0px;
+  width: 100%;
+  height: 25px;
+}
+
+#search-votes-input {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  height: 100%;
+  width: 100%;
+  padding-right: 16px;
+}
+
+#search-votes-button {
+  position: absolute;
+  top: 2px;
+  right: 3px;
+  border: 0px;
+  background-color: #ffffff;
 }
 
 thead,
